# enaex_shovel

./: .dockerignore  .env_example  .gitignore  Dockerfile  main.py  pyproject.toml  upload_acr_eanex.sh
config/: settings.py
manual_script/: download_images.py  manual_processing.py  urls.txt
src/: pipeline.py  worker.py
src/domain/: __init__.py
src/domain/granulometry/: models.py
src/domain/schemas/: camera.py  granulometry.py  models.py  rocks.py
src/nodes/: azure_results.py  base.py  blobstorage.py  granulometry.py  ia.py  viz.py
src/utils/: __init__.py  camera.py  model.py
